--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,6 @@
     "postinstall": "npm run typings install",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
     "typings": "typings"
   },
   "license": "ISC",
@@ -20,9 +18,7 @@
     "zone.js": "0.5.14"
   },
   "devDependencies": {
-    "concurrently": "^1.0.0",
-    "lite-server": "^2.0.1",
-    "typescript": "^1.7.5",
+    "typescript": "1.7.5",
     "typings": "^0.6.8"
   }
 }
